--- a/index.html
+++ b/index.html
@@ -35,15 +35,32 @@
         </div>
       </div>
     </nav>
-    <hr class="mt-0"/>
 
-  <div class="vh-100 bg-primary">
+    <!-- landing section -->
+    <div class="container-fluid landing py-3 py-md-4">
+      <div class="row justify-content-center align-items-center">
+        <div class="col-6 col-lg-4 d-block py-2 py-md-4">
+          <div class="profile-pic img-round">
+            <img src="./pictures/new linkedin pic.jpg" alt="me!">
+          </div>
+        </div>
+        <div class="col-12 expertise text-center py-2 py-md-4">
+          <p class="d-block d-lg-inline-block"><i class="fas fa-code"></i> Full Stack Developer <span class="d-none d-lg-inline px-3">|</span></p>
+          <p class="d-block d-lg-inline-block"><i class="fas fa-project-diagram"></i> Project Manager <span class="d-none d-lg-inline px-3">|</span></p>
+          <p class="d-block d-lg-inline-block"><i class="fas fa-poll"></i> Market Researcher</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- portfolio section -->
+    <div class="portfolio">
+      <div class="container-fluid">
+        <p>portfolio here</p>
+      </div>
+    </div>
 
 
-  <div class="container-fluid">
 
-  </div>
-  </div>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
