small edits to navigation and landing sections: - navigation bar now shows my name only in md and smaller sizes - for lg and bigger sizes, my name is hidden in navigation and shows up below my picture. Navigation links also get centered when the name is not showing up on navigation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light py-2" id="navbar">
-      <a class="navbar-brand ml-2" href="#navbar">Felipe Berger</a>
+      <a class="navbar-brand d-inline d-lg-none ml-2" href="#navbar">Felipe Berger</a>
 
       <!-- hamburger button for medium and smaller screen sizes -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +27,7 @@
 
       <!-- navigation links, collapses into hamburger for medium and smaller -->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <div class="navbar-nav ml-auto">
+        <div class="navbar-nav ml-auto mr-lg-auto">
           <a href="#portfolio" class="nav-item nav-link px-2">Portfolio</a>
           <a href="#about" class="nav-item nav-link px-2">About</a>
           <a href="#skills-certifications" class="nav-item nav-link px-2">Skills &amp; Certifications</a>
@@ -43,6 +43,7 @@
           <div class="profile-pic img-round">
             <img src="./pictures/new linkedin pic.jpg" alt="me!">
           </div>
+          <h1 class="text-center d-none d-lg-block pt-2">Felipe Berger</h1>
         </div>
         <div class="col-12 expertise text-center py-2 py-md-4">
           <p class="d-block d-lg-inline-block"><i class="fas fa-code"></i> Full Stack Developer <span class="d-none d-lg-inline px-3">|</span></p>
@@ -55,7 +56,7 @@
     <!-- portfolio section -->
     <div class="portfolio">
       <div class="container-fluid">
-        <p>portfolio here</p>
+        <h1 class="text-center py-5">Portfolio</h1>
       </div>
     </div>
 
