--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light py-2" id="navbar">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light py-2" id="navbar">
       <a class="navbar-brand d-inline d-lg-none ml-2" href="#navbar">Felipe Berger</a>
 
       <!-- hamburger button for medium and smaller screen sizes -->
@@ -43,7 +43,7 @@
           <div class="profile-pic img-round">
             <img src="./pictures/new linkedin pic.jpg" alt="me!">
           </div>
-          <h1 class="text-center d-none d-lg-block pt-2">Felipe Berger</h1>
+          <h1 class="text-center d-none d-lg-block pt-5">Felipe Berger</h1>
         </div>
         <div class="col-12 expertise text-center py-2 py-md-4">
           <p class="d-block d-lg-inline-block"><i class="fas fa-code"></i> Full Stack Developer <span class="d-none d-lg-inline px-3">|</span></p>
@@ -55,8 +55,42 @@
 
     <!-- portfolio section -->
     <div class="portfolio">
-      <div class="container-fluid">
-        <h1 class="text-center py-5">Portfolio</h1>
+      <div class="container-fluid py-3 py-md-4">
+        <h1 class="text-center pb-3 pb-md-4 portfolio-header">Portfolio</h1>
+        <div class="row px-3">
+          <div class="col-12 col-md-6 pb-3 px-3">
+            <div class="portfolio-entry pl-2">
+              <a href="#">
+                <div class="aspectRatioBox rounded" style="background-image: url('https://via.placeholder.com/640x480')">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 pb-3 px-3">
+            <div class="portfolio-entry pl-2">
+              <a href="#">
+                <div class="aspectRatioBox rounded" style="background-image: url('https://via.placeholder.com/640x480')">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 pb-3 px-3">
+            <div class="portfolio-entry pl-2">
+              <a href="#">
+                <div class="aspectRatioBox rounded" style="background-image: url('https://via.placeholder.com/640x480')">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 pb-3 px-3">
+            <div class="portfolio-entry pl-2">
+              <a href="#">
+                <div class="aspectRatioBox rounded" style="background-image: url('https://via.placeholder.com/640x480')">
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
