--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     </div>
 
     <!-- portfolio section -->
-    <div class="portfolio">
+    <div class="portfolio py-4 py-md-5">
       <div class="container-fluid py-3 py-md-4">
         <h1 class="text-center pb-3 pb-md-4 portfolio-header">Portfolio</h1>
-        <div class="row px-3">
+        <div class="row px-4 py-3 py-md-5">
           <div class="col-12 col-md-6 pb-3 px-3">
             <div class="portfolio-entry pl-2">
               <a href="#">
