--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   </head>
 
   <body>
+    <!-- navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light py-2" id="navbar">
-      <a class="navbar-brand d-inline d-lg-none ml-2" href="#navbar">Felipe Berger</a>
+      <a class="navbar-brand d-inline d-lg-none ml-2" href="#navbarSupportedContent">Felipe Berger</a>
 
       <!-- hamburger button for medium and smaller screen sizes -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,17 +37,18 @@
       </div>
     </nav>
 
+
     <!-- landing section -->
-    <div class="container-fluid landing py-3 py-md-4">
+    <div class="container-fluid landing py-2 py-md-3">
       <div class="row justify-content-center align-items-center">
-        <div class="col-6 col-lg-4 d-block py-2 py-md-4">
+        <div class="col-6 col-lg-4 d-block py-2 py-md-3">
           <div class="profile-pic img-round">
             <img src="./pictures/new linkedin pic.jpg" alt="me!">
           </div>
           <h1 class="text-center d-none d-lg-block pt-5">Felipe Berger</h1>
         </div>
         <div class="col-12 expertise text-center py-2 py-md-4">
-          <p class="d-block d-lg-inline-block"><i class="fas fa-code"></i> Full Stack Developer <span class="d-none d-lg-inline px-3">|</span></p>
+          <p class="d-block d-lg-inline-block"><i class="fas fa-code"></i> Full Stack Web Developer <span class="d-none d-lg-inline px-3">|</span></p>
           <p class="d-block d-lg-inline-block"><i class="fas fa-project-diagram"></i> Project Manager <span class="d-none d-lg-inline px-3">|</span></p>
           <p class="d-block d-lg-inline-block"><i class="fas fa-poll"></i> Market Researcher</p>
         </div>
@@ -54,7 +56,7 @@
     </div>
 
     <!-- portfolio section -->
-    <div class="portfolio py-4 py-md-5">
+    <div class="portfolio py-3 py-md-5" id="portfolio">
       <div class="container-fluid py-3 py-md-4">
         <h1 class="text-center pb-3 pb-md-4 portfolio-header">Portfolio</h1>
         <div class="row px-4 py-3 py-md-5">
