--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <!-- navbar -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light py-2" id="navbar">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark py-2" id="navbar">
       <a class="navbar-brand d-inline d-lg-none ml-2" href="#navbarSupportedContent">Felipe Berger</a>
 
       <!-- hamburger button for medium and smaller screen sizes -->
@@ -61,7 +61,7 @@
         <h1 class="text-center pb-3 pb-md-4 portfolio-header">Portfolio</h1>
         <div class="row px-4 py-3 py-md-5">
           <div class="col-12 col-md-6 pb-3 px-3">
-            <div class="portfolio-entry pl-2">
+            <div class="portfolio-entry pl-2 pb-3">
               <a href="#">
                 <div class="aspectRatioBox rounded" style="background-image: url('https://via.placeholder.com/640x480')">
                 </div>
@@ -69,7 +69,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 pb-3 px-3">
-            <div class="portfolio-entry pl-2">
+            <div class="portfolio-entry pl-2 pb-3">
               <a href="#">
                 <div class="aspectRatioBox rounded" style="background-image: url('https://via.placeholder.com/640x480')">
                 </div>
@@ -77,7 +77,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 pb-3 px-3">
-            <div class="portfolio-entry pl-2">
+            <div class="portfolio-entry pl-2 pb-3">
               <a href="#">
                 <div class="aspectRatioBox rounded" style="background-image: url('https://via.placeholder.com/640x480')">
                 </div>
@@ -85,7 +85,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 pb-3 px-3">
-            <div class="portfolio-entry pl-2">
+            <div class="portfolio-entry pl-2 pb-3">
               <a href="#">
                 <div class="aspectRatioBox rounded" style="background-image: url('https://via.placeholder.com/640x480')">
                 </div>
@@ -96,8 +96,33 @@
       </div>
     </div>
 
+    <!-- about section -->
+    <div class="about py-3 py-md-5" id="about">
+      <div class="container-fluid py-3 py-md-4">
+        <h1 class="text-center pb-3 pb-md-4 about-header">About</h1>
+        <div class="row px-4 py-3 py-md-5 align-items-center">
+          <div class="col-5 d-none d-lg-inline pb-3 pr-2">
+            <div class="about-picture pl-2">
+                <div class="aspectRatioBox rounded" style="background-image: url('./pictures/new linkedin pic.jpg')">
+                </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-7 text-center text-lg-left about-text">
+            <p><b>Felipe</b> has always loved technology and its positve impact on people's lives. After working spending several years working in consulting and market research firms and being frustrated that he could not implement the findings, he decided to take the leap into web development so he could get his hands dirty!</p>
+            <p>Due to his previous professional life, Felipe is capable of not only designing and implementing web solutions, but also managing projects (certified PMP project manager), communicate effectively with stakeholders, and understand and operationalize consumer needs.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <!-- contact section -->
+    <footer class="contact py-3 py-md-5" id="contact">
+      <div class="container-fluid py-3 py-md-4">
+        <div class="row">
 
+        </div>
+      </div>
+    </footer>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
