Added overlays on hover to portfolio images

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
           <div class="col-12 col-md-6 pb-3 px-3">
             <div class="portfolio-entry pl-2 pb-3">
               <a href="#">
-                <div class="aspectRatioBox rounded" style="background-image: url('https://via.placeholder.com/640x480')">
+                <div class="aspectRatioBox rounded position-relative" style="background-image: url('https://via.placeholder.com/640x480')">
+                  <div class="position-absolute w-100 h-100 d-flex flex-column justify-content-center align-items-center rounded overlay">
+                    <i class="fas fa-plus"></i>
+                  </div>
                 </div>
               </a>
             </div>
@@ -72,7 +75,10 @@
           <div class="col-12 col-md-6 pb-3 px-3">
             <div class="portfolio-entry pl-2 pb-3">
               <a href="#">
-                <div class="aspectRatioBox rounded" style="background-image: url('https://via.placeholder.com/640x480')">
+                <div class="aspectRatioBox rounded position-relative" style="background-image: url('https://via.placeholder.com/640x480')">
+                  <div class="position-absolute w-100 h-100 d-flex flex-column justify-content-center align-items-center rounded overlay">
+                    <i class="fas fa-plus"></i>
+                  </div>
                 </div>
               </a>
             </div>
@@ -80,7 +86,10 @@
           <div class="col-12 col-md-6 pb-3 px-3">
             <div class="portfolio-entry pl-2 pb-3">
               <a href="#">
-                <div class="aspectRatioBox rounded" style="background-image: url('https://via.placeholder.com/640x480')">
+                <div class="aspectRatioBox rounded position-relative" style="background-image: url('https://via.placeholder.com/640x480')">
+                  <div class="position-absolute w-100 h-100 d-flex flex-column justify-content-center align-items-center rounded overlay">
+                    <i class="fas fa-plus"></i>
+                  </div>
                 </div>
               </a>
             </div>
@@ -88,7 +97,10 @@
           <div class="col-12 col-md-6 pb-3 px-3">
             <div class="portfolio-entry pl-2 pb-3">
               <a href="#">
-                <div class="aspectRatioBox rounded" style="background-image: url('https://via.placeholder.com/640x480')">
+                <div class="aspectRatioBox rounded position-relative" style="background-image: url('https://via.placeholder.com/640x480')">
+                  <div class="position-absolute w-100 h-100 d-flex flex-column justify-content-center align-items-center rounded overlay">
+                    <i class="fas fa-plus"></i>
+                  </div>
                 </div>
               </a>
             </div>
