Connected contact me section icons to my linkedIn, Github, and email. Minor style edits to portfolio :hover transition speed.

--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
 
     <!-- contact section -->
     <footer class="contact py-2 py-md-4" id="contact">
-      <div class="container-fluid py-1 py-md-2">
+      <div class="container-fluid pt-2 pb-1 py-md-2">
         <h1 class="text-center pb-1 pb-md-2 contact-header">Contact Me</h1>
         <div class="row">
           <div class="col-12 text-center contact-links">
-              <a href="#" class="px-3"><i class="fab fa-linkedin"></i></a>
-              <a href="#" class="px-3"><i class="fab fa-github-square"></i></a>
-              <a href="#" class="px-3"><i class="fas fa-envelope-square"></i></a>
+              <a href="https://www.linkedin.com/in/felipe-berger" target="_blank" class="px-3"><i class="fab fa-linkedin"></i></a>
+              <a href="https://github.com/felipeberger" target="_blank" class="px-3"><i class="fab fa-github-square"></i></a>
+              <a href="mailto:felipecberger@gmail.com" class="px-3"><i class="fas fa-envelope-square"></i></a>
           </div>
         </div>
       </div>
